# taskflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  locustfile.py  pyproject.toml  rabbitmq.conf  run-locust.sh
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 084dd6c092f2_initial_tasks_table_creation.py  0bac1b62d49e_chore_initial_commit.py  246b08e7d055_initial_tasks_table_creation.py  759d99e39fb5_chore_added_colums_for_tracking_start_.py  8bda200d00bc_perf_switched_from_individual_indexes_.py  9d30a4ef0252_chore_added_columns_for_tracking_logs_.py  c83b4d0f50af_added_indexes_to_the_fields_status_and_.py  d8eaca13860e_chore_added_idempotency_key.py  dc5ac3fe8ec3_chore_added_in_dlq_column_for_tracking_.py
docker/: init_databases.sh  redis.conf  run.sh
docs/: ADR.md  load_test.md  notes.md  rabbitmq_concepts.md  sql.md
scripts/: tasks_cleanup.py
src/: __init__.py  utilities.py
src/api/: app.py  utilities.py
src/api/core/: cache.py  dependencies.py  exceptions.py  lifespan.py  middleware.py  ratelimit.py  responses.py
src/api/routes/: __init__.py
src/config/: __init__.py  config.py  config.yaml  settings.py
src/db/: __init__.py  init.py  models.py
src/frontend/: app.py
src/rabbitmq/: base.py  consumer.py  producer.py  utilities.py
src/schemas/: base.py  types.py
src/services/: log_cleanup.py  producer.py  storage.py
tests/: conftest.py  test_api_routes.py  test_demo.py  test_rmq_consumer.py  test_rmq_producer.py  test_routes_extra.py  test_task_repository.py
(+19 files in other folders)
