[project]
name = "taskflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.8",
    "aiocache[redis]>=0.12.3",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "boto3>=1.42.19",
    "fastapi[standard]>=0.128.0",
    "msgspec>=0.20.0",
    "omegaconf>=2.3.0",
    "pydantic-settings>=2.12.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "jupyterlab>=4.5.1",
    "locust>=2.43.0",
    "pyrefly>=0.46.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


# Pyrefly header
[tool.pyrefly]

#### configuring what to type check and where to import from
project-includes = ["src", "."]
project-excludes = ["**/.[!/.]*"]
search-path = ["."]
